--- a/see/mains_see.css
+++ b/see/mains_see.css
@@ -12,7 +12,7 @@ header {
 background-image: url(image/wpid-vech-rn-y-vano_i_1.jpg);
 background-size: cover;
 max-width: 100%;
-height: 550;
+height: 550px;
 box-sizing: border-box;
     position: relative;
     z-index: 1;
