--- a/about/style.css
+++ b/about/style.css
@@ -96,448 +96,7 @@ ul {
         clear: both;
         }  
         
-  /*footer{
-  width: 100%;
-  height: 150px;
-}*/
-header{
-  width: 100%;
-  height: 300px; 
-  background-image: url(iv-frn.jpg);
-  } 
-
-
-  header .row .cols img{
-        margin-left: 50px;
-        margin-top: 20px;
-        display: block;
-        
-       text-align: left; 
-       clear: both;
-
-        }
-  header .row .cols h2,
-  header .row .cols h3
-  {
-  display: block;
-  text-align: left;
-  margin-left: 50px;
-  color: white;
-  font-size: 22px;
-  font-family: Calibri, "Trebuchet MS", sans-serif;
-  }
-  header .row .cols h2{
-  font-size: 30px;
-    }
-
-        /* Навігаційна панель*/
-        nav{
-          margin-left: 0px;
-          margin-right: 0px;
-          width: 100%;
-		  
-          
-        }
-        nav ul{
-			   height:100%;
-          margin-top: 0;
-         text-align: right;
-         padding-right: 20px; 
-        
-        }
-
- nav ul li{
-  display: inline-block;
-  list-style-type: none;
-  margin-left: 15px;
-  padding: 2px 5px;
-  border-radius: 5px;
-  opacity: 1;
-  font-weight: normal;
-  font-size: 17px;
-   
- } 
-
-
-nav a{
-  text-decoration: none;
-  color: white;
-   } 
-nav a:hover{
-  text-decoration: underline;
-  color: white;
-   } 
-
-/*header hidden*/
-.header_hidden{
-  display: none;
-  width: 100%;
-  height: 100px;
-  background-image: linear-gradient(rgba(191,239,255,1), rgba(91,124,178,1));
  
-}
-
-
-.header_hidden   nav{
-          margin-left: 0px;
-          margin-right: 0px;
-          width: 100%;
-      
-          
-        }
-  .header_hidden  nav ul{
-         height:100%;
-          margin-top: 0;
-         text-align: right;
-         padding-right: 20px; 
-        
-        }
-
-.header_hidden nav ul li{
-  display: inline-block;
-  list-style-type: none;
-  margin-left: 15px;
-  padding: 2px 5px;
- font-weight: bold;
-  font-size: 17px;
-   
- } 
-
-
-.header_hidden nav a{
-  text-decoration: none;
-  color: black;
-  position: relative;
-  text-transform: uppercase;
-   
-} 
-/*header hidden*/
-/* Панель пошуку*/
-.settings{
- text-align: right;
- padding-right: 0px;
- margin-top: 5px;
- margin-bottom: 5px;
-}
-input[type="text"]{
-  margin-left: 10px;
-  border-radius: 3px;
-  margin-top: 3px;
-  
-}
-input[type="button"]{
-  margin-left: 10px;
-  border-radius: 3px;
-  margin-top: 3px;
-  width: 60px;
-}
-
-
- /* menu of saits language */
-ul.dropdown{
-  display: block;
-float: right;
-margin-left: 20px;
-margin-top: 3px;
-margin-right: 20px;
-}
-
-ul.dropdown li { position: relative; 
-border:2px solid blue;
-padding:3px;
-border-radius: 3px;
-background-image: url(ukr.jpg);
-width: 40px;
-height: 20px;
-
-
-}
- ul.dropdown,
- ul.dropdown-inside {
- list-style-type: none;
- padding: 0;
- }
- ul.dropdown-inside {
- position: absolute;
- left: -9999px;
- }
- ul.dropdown li.dropdown-top {
- display: inline;
- float: left;
- margin: 0 1px 0 0;
-
- }
- ul.dropdown li.dropdown-top a {
- padding: 3px 10px 4px;
- display: block;
- }
- ul.dropdown a.dropdown-top { background: #efefef; }
- ul.dropdown a.dropdown-top:hover { padding: 2px 10px 5px; }
- ul.dropdown li.dropdown-top:hover .dropdown-inside {
- display: block;
- left: 0;
- }
- ul.dropdown .dropdown-inside { background: #fff; }
- ul.dropdown .dropdown-inside a:hover { background: #efefef; }
- li.dropdown-top img{
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  vertical-align: center;
-  padding-top: 3px;
-
- }
-  ul.dropdown-inside li:nth-child(1){
-     background-image: url(ukr.jpg);
-       background-repeat: repeat-x;
-      display: inline-block;
-     width: 40px;
-  }
-   ul.dropdown-inside li:nth-child(2){
-     background-image: url(pol.jpg);
-       background-repeat: repeat-x;
-      display: inline-block;
-     width: 40px;
-  }
-   ul.dropdown-inside li:nth-child(3){
-     background-image: url(eng.jpg);
-     background-repeat: repeat-x;
-      display: inline-block;
-     width: 40px;
-  }
-
-
-/*main section*/
-.main{
-    height: 300px;
-    background-color: #F9F2EC;
-    text-align: center;
-
-}
-.main article{
-  width: 80%;
-  float:left;
-  height: 300px;
-  margin-left: 10%; 
-  margin-right: 10%; 
-  margin-top:-40px;
-  background-color: #009bdf;
-  position: relative;
-}
-.main article.orange{
-  background-color:#f58220 ;
-}
-.main article.red{
-  background-color:#ed1c24 ;
-}
-.main article.green{
-  background-color:#00a651;
-}
-.main article h2{
-  font-family: Calibri, "Trebuchet MS", sans-serif;
-  
-  font-size: 21px;
-  font-weight: normal;
-  color:white;
-  vertical-align: baseline;
-  line-height: 30px;
-  margin-top:5px;
-}
-.main article h2 a{
-   color:white;
-   text-transform: uppercase;
-   text-decoration: none;
-
-}
-.main article h2 a:hover{
-   color:white;
-   text-transform: uppercase;
-   text-decoration: underline;
-
-}
-.main article .content{
-position: absolute;
-top: 12%;
-left: 0;
-background-color: white;
-height: 270px;
-width: 100%;
-}
-
-
-/*Effects with content of main part*/
-
-.reveal-wrapper{
- 
-position: relative;
-height:270px;}
-
-.reveal-wrapper h1{
-  margin: 0;
-  padding: 100px;
-  color: white;
-}  
- 
-
-.reveal-wrapper:hover .reveal-top{
-height: 0%;
-}
-.reveal-wrapper:hover .reveal-content{
-	top:0;
-	left:0;
-height: 100%;
-
-}
-.reveal-wrapper .reveal-content{
-	 overflow: hidden;
-   position: absolute;
-  top: 80%;
-  left: 0;  
-  color:black ;
-  background:white;
-  width:100%;
-  height:20%;
-  -webkit-transition:all 0.6s ease;
-  font-size: 17px;
-  font-family: Calibri, "Trebuchet MS", sans-serif;
-  padding: 5px;
-   
-}
-.reveal-top{
-  overflow: hidden;
-  background-image: url(images/vartoPobachit.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 80%;
-  -webkit-transition:height 0.6s ease;
-      }
-.reveal-top.place{
-  background-image: url(images/place.png);
-}
-.reveal-top.hotels{
-  background-image: url(images/hotels.jpg);
-}
-.reveal-top.food{
-  background-image: url(images/food.png);
-}
-.reveal-content h1{
-  color: black;
-}
-.reveal-content:hover .more_about{
- position: absolute;
- right: 0;
- bottom: 0;
-  color:blue;
-  font-size: 16px;
-}
-
-/*panel of event*/
-  .main h2{
-
-    text-align: center;
-    margin-left: 0px;
-    font-family: Calibri, Trebuchet MS, sans-serif;
-    margin-top: 10px;
-    font-size: 24px;
-  }
-  /*
-  .main  h2 span{
-    display: inline-block;
-    border-radius: 20px;
-    padding:5px;
-    width: 40px;
-    height: 40px;
-    background-image: url(images/info.png);
-    margin-bottom: 5px;
-    margin-right: 5px;
-    margin-left: 10px;
-    text-align: center;
-  }
-*/
- .main .cols{
-background-color: #F9F2EC;
-
- } 
- .main .color{
-	 background-color:#f3e5d8;
-	 margin-top:6px;
- }
-.event{
-  margin-top: 25px;
-  height: 100%
-}
-.news-container, .news {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.news-container {
-  flex-direction: column;
-  height: 350 px;
-  background-color: #bbeee7
-  padding: 1em;
-  
-}
-
-.news-header {
-  margin: auto;
-  font-size: 150%;
-  color: #541906;
-  padding-bottom: 0.5em;
-}
-
-.news {
-  justify-content: space-around;
-}
-
-.news-item {
-  background-color: white;
-  margin: 0 .5em .8em;
-  box-shadow: 5px 5px 5px #663333;
-      /*border: 2px solid #541906;*/
-
-}
-
-.news-item:hover {
-  font-weight: bold;
-      opacity: 0.8;
-      border: 2px solid blue;
-}
-
-.news-link a {
-  color: #541906;
-  text-decoration: none;
-}
-
-.news-link {
-  text-align: center;
-}
-
-.allnews {
-  margin: auto;
-  padding-top: 0.7em;
-}
-
-.allnews a {
-  color: #541906;
-  text-decoration: none;
-  font-weight: bold;
-} 
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -692,42 +251,44 @@ input[type="text"]{
 
 /*style3*/
 .menu-container a {
-	text-align: center;
-	display: block;
-	padding: 10px 15px;
-	color: white;
+  text-align: center;
+  display: block;
+  padding: 10px 15px;
+  color: white;
     text-decoration: none;
+     font-family: Tahoma,sans-serif;
+     font-size: 20px;
 
 }
 
 .menu-container a:hover {
 text-decoration: underline;
-	}
+ color: lightgreen;
+  } 
 
-	.logo-container {
-		display: none;
-	}
+  .logo-container {
+    display: none;
+  }
 
 
-	.search {
-	margin-left: 10px;
+  .search {
+  margin-left: 10px;
     text-align: center;
-	display: block;
+  display: block;
 }
-
 
 
 @media (min-width: 600px) {
 
 .header-container, .menu-container, .logo-container {
-		display: flex;
-	flex-wrap: wrap;
-	
+    display: flex;
+  flex-wrap: wrap;
+  
 }
 
 .header-container {
-	justify-content: space-between;
-	flex-direction: column-reverse;
+  justify-content: space-between;
+  flex-direction: column-reverse;
 
 }
 
@@ -735,12 +296,14 @@ text-decoration: underline;
   list-style: none;
   margin-right: 20px;
   margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .logo-container {
-	flex-direction: column;
-	align-items: center;
-margin-right: auto;
+  flex-direction: column;
+  align-items: center;
+    margin-right: auto;
+margin-bottom: auto;
 margin-left: 20px;
 margin-top: 20px;
 background-color: rgba(0, 120, 201, 0.65);
@@ -748,41 +311,42 @@ background-color: rgba(0, 120, 201, 0.65);
 
 
 .slogan {
-	color:white;
-	font-size: 1.3em;
+  color:white;
+  font-size: 1.3em;
 font-weight: bold;
+text-align: center;
 }
 
 .menu-container a {
-	text-align: center;
-	display: block;
-	padding: 10px 15px;
+  text-align: center;
+  display: block;
+  padding: 10px 15px;
 }
 
 
 
 .menu-container input {
-	
-	margin-top: 10px;
+  
+  margin-top: 10px;
 }
 }
 
 
-@media (min-width: 1180px) {
+@media (min-width: 1305px) {
 
 .header-container, .menu-container, .logo-container {
-		display: flex;
-	flex-wrap: wrap;
-	
+    display: flex;
+  flex-wrap: wrap;
+  
 }
 
 .header-container {
-	justify-content: space-between;
-	flex-direction: row;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
 .logo-container {
-	background-color: rgba(0, 120, 201, 0.4);
+  background-color: rgba(0, 120, 201, 0.4);
 }
 
 }
@@ -1269,7 +833,7 @@ div.desc {
      padding-left: 15px;
      padding-right: 15px;
      box-sizing: border-box;
-	 text-indent: 1.5em;
+
     
  }  
  
@@ -1299,7 +863,7 @@ div.desc {
 	  
 .image_ab{
     margin: 15px;
-	float: left;
+	
 	width: 90%;
     height: auto;
     
